--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Responsive website using html and css</title>
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+
 </head>
 <body>
     <section id="header">
@@ -26,30 +28,208 @@
 
     <nav id="sideNav">
   <ul>
-    <li><a href="#">HOME</a> <br></li>
-    <li><a href="#">ABOUT US</a><br></li>
-    <li><a href="#">FEATURES</a><br></li>
-    <li><a href="#">COURSES</a><br></li>
-    <li><a href="#">OFFER</a><br></li>
-    <li><a href="#">CONTACT US</a></li>
+    <li><a href="#header">HOME</a> <br></li>
+    <li><a href="#about">ABOUT US</a><br></li>
+    <li><a href="#features">FEATURES</a><br></li>
+    <li><a href="#courses">COURSES</a><br></li>
+    <li><a href="#offer">OFFER</a><br></li>
+    <li><a href="#contact">CONTACT US</a></li>
   </ul>
     </nav>
         <img src="./IMAGES/menu.jpeg" id="menuBtn" alt="img">
 
+<section id="about">
+  <div class="about-left-col">
+    <img src="IMAGES/about.jpeg" alt="">
+
+  </div>
+  <div class="about-right-col">
+    <div class="about-text">
+      <h1>About Us</h1>
+      <span class="square"></span> 
+      <p>Contrary to popular belief,Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione adipisci unde consequuntur porro, magni culpa facilis molestiae autem tenetur quas inventore rem voluptatum cum error eos a optio veritatis harum amet, repellat dolorem similique distinctio natus! Nam magni hic qui, at tempore accusantium, praesentium amet voluptatem tempora ex voluptas earum modi dolore natus omnis consequatur expedita quod suscipit cupiditate cum? </p>
+      <span class="line-1"></span><br>
+      <span class="line-2"></span><br>
+      <span class="line-3"></span>
+     <h2>"Learning is not attaained by chance,it must be sought for with ardor and attended tyo with digligence</h2>
+<h3>---Abigail Adams</h3></div>
+  </div>
+</section>
+
+<section id="features">
+  <div class="feature-row">
+    <div class="feature-col">
+      <img src="/IMAGES/pic-1.jpeg" alt="">
+   <h4>Learn Anywhere</h4>
+   <p>Switch between your computer,tablet or mobile device</p>
+    </div>
+    <div class="feature-col">
+      <img src="/IMAGES/pic-2.jpeg" alt="">
+<h4>Expert Teachers</h4>
+<p>Learn from industry experts who are passionate about teaching.</p>
+    </div>
+    <div class="feature-col">
+      <img src="/IMAGES/pic-3.jpeg" alt="">
+<h4>Unlimited Access</h4>
+<p>Choose what you'd like to learn from our extensive subscription library.</p>
+    </div>
+  </div>
+</section>
+
+<div class="feature-btn">
+  <div class="line">
+    <span class="line-1"></span><br>
+    <span class="line-2"></span><br>
+    <span class="line-3"></span>
+  </div>
+  <button class="common-btn">Start Free trial</button>
+</div>
+
+<!-- courses  -->
+ <section id="courses">
+  <div class="container course-row">
+    <div class="course-left-col">
+      <div class="course-text">
+        <h1>Browse our top <br> Courses</h1>
+       <span class="square"></span>
+        <p>Contrary to popular belief,Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum animi eum eveniet magnam cumque perspiciatis quidem aliquid ut, libero deleniti quaerat mollitia dolor eligendi. Deleniti eius</p>
+  <button class="common-btn">View All Courses</button>
+        <div class="line">
+          <span class="line-1"></span><br>
+          <span class="line-2"></span><br>
+          <span class="line-3"></span>
+        </div>
+      </div>
+    </div>
+    <div class="course-right-col">
+    <img src="IMAGES/course.jpeg" alt="">
+    </div>
+  </div>
+ </section>
+
+ <!-- offer  -->
+
+ <section id="offer">
+  <div class="about-left-col">
+    <img src="IMAGES/offer.jpeg" alt="">
+
+  </div>
+  <div class="about-right-col">
+    <div class="about-text">
+      <h1>Limitless learning,<br>limiteless possibilities</h1>
+      <span class="square"></span> 
+      <p>Contrary to popular belief,Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione adipisci unde consequuntur porro, magni culpa facilis molestiae autem tenetur quas inventore rem voluptatum cum error eos a optio veritatis harum amet, repellat dolorem similique distinctio natus! Nam magni hic qui, at tempore accusantium, praesentium amet voluptatem tempora ex voluptas earum modi dolore natus omnis consequatur expedita quod suscipit cupiditate cum? </p>
+  <button class="common-btn">Start Free Trial</button> <br>
+      <span class="line-1"></span><br>
+      <span class="line-2"></span><br>
+      <span class="line-3"></span>
+     <h2>"Learning is not attaained by chance,it must be sought for with ardor and attended tyo with digligence</h2>
+<h3>---Abigail Adams</h3></div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+
+<section class="contact">
+  <div class="container contact-row">
+        <div class="contact-left-col">
+          <h1>Sign Up to join Our <br>Learning Community</h1>
+        <form action="">
+          <input type="text" placeholder="Enter Name">
+          <input type="email" placeholder="Enter Email">
+          <input type="password" placeholder="Enter Password">
+          <div class="btn-box">
+            <button class="common-btn">Sign Up</button> 
+            <button class="common-btn">Start Free Trial</button>
+
+          </div>
+
+        </form>
+        </div>
+        <div class="contact-right-col">
+          <img src="IMAGES/contact.jpeg" alt="">
+        </div>
+  </div>
+</section>
+
+<!-- footer  -->
+
+<section id="footer">
+  <div class="container footer-row">
+    <hr>
+ <div class="footer-left-col">
+ <div class="footer-links">
+  <div class="link-title">
+    <h4>Product</h4>
+    <small>Our Plan</small><br>
+    <small>Free Trail</small>
+  </div>
+  <div class="link-title">
+    <h4>About Us</h4>
+    <small>Request Demo</small><br>
+    <small>FAQs</small>
+  </div>
+  <div class="link-title">
+    <h4>Support</h4>
+    <small>Features</small><br>
+    <small>Contact Us</small>
+  </div>
+  <div class="link-title">
+    <h4>Explore</h4>
+    <small>Find a nonprofit</small><br>
+    <small>Corporate Solution</small>
+  </div>
+ </div>
+ </div>
+ <div class="footer-right-col">
+  <div class="footer-info">
+    <div class="copyright-text">
+      <small>support@Xypo.com</small><br>
+      <small>copyright 2020 Xypo</small>
+    </div>
+    <div class="footer-logo">
+      <img src="IMAGES/logo.jpeg" alt="">
+      <button class="common-btn">English</button>
+    </div>
+  </div>
+ </div>
+  </div>
+</section>
+
+
+<!-- SOCIAL ICONS  -->
+<div class="social-icons">
+  <img src="IMAGES/facebook.jpeg" alt="">
+  <img src="IMAGES/instagram.jpeg" alt="">
+  <img src="IMAGES/twitter.jpeg" alt="">
+  <img src="IMAGES/linkedin.jpeg" alt="">
+</div>
+
+
+
+
 
         <script>
-       let img = document.querySelector("img");
-let nav = document.querySelector("nav");
+       let menuBtn=document.getElementById("menuBtn");
+       let sideNav=document.getElementById("sideNav");
 
-nav.style.right = "-250px"; // Initially hide the navigation bar
+       sideNav.style.right="-250px";
+       menuBtn.onclick=function(){
+        if(sideNav.style.right=="-250px"){
+        sideNav.style.right="0";
+       }
+       else{
+        sideNav.style.right="-250px";
+       }
 
-img.onclick = () => {
-  if (nav.style.right === "-250px") { // Use strict comparison (===)
-    nav.style.right = "0px"; // Show the navigation bar
-  } else {
-    nav.style.right = "-250px"; // Hide the navigation bar
-  }
-};
+       }
+       
+	var scroll = new SmoothScroll('a[href*="#"]',{
+    speed:1000,
+    speedAsDuration:true
+  });
+
+     
         </script>
 </body>
 </html>
